# ChangeLog for dev-perl/X10
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/X10/ChangeLog,v 1.6 2006/09/17 00:10:44 mcummings Exp $

  17 Sep 2006; Michael Cummings <mcummings@gentoo.org> X10-0.03.ebuild:
  Keywording ~amd64

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org> X10-0.03.ebuild:
  Adding perl dep; fixed DEPEND

  05 Jul 2006; Christian Hartmann <ian@gentoo.org> X10-0.03.ebuild:
  Fixed RDEPEND wrt bug #134781

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> X10-0.03.ebuild:
  Mark 0.03 ~ia64

  21 Jan 2006; Tobias Scherbaum <dertobi123@gentoo.org> X10-0.03.ebuild:
  added to ~ppc, bug #119501

*X10-0.03 (16 Jan 2006)

  16 Jan 2006; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +X10-0.03.ebuild:
  Dep for zoneminder ebuild, ala r103 :)
