@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/X10/X10-0.03.ebuild,v 1.6 2006/09/17 00:10:44 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/X10/X10-0.03.ebuild,v 1.7 2007/01/08 17:23:39 mcummings Exp $
 
 inherit perl-module
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://cpan/authors/id/R/RO/ROBF/${P}.tar.gz"
 
 LICENSE="Artistic"
 SLOT="0"
-KEYWORDS="~amd64 ~ia64 ~ppc ~x86"
+KEYWORDS="amd64 ~ia64 ~ppc ~x86"
 IUSE=""
 
 SRC_TEST="do"
@@ -19,5 +19,3 @@ DEPEND="dev-perl/Device-SerialPort
 	dev-perl/Astro-SunTime
 		dev-perl/Time-modules
 	dev-lang/perl"
-RDEPEND="${DEPEND}"
-
